# ai-photo-tagger

./: .gitignore  README.md  clean_tags.txt  config.yaml  example.py  pyproject.toml  setup_demo.py  tags.txt  testcleanup.sh
src/ai_photo_tagger_lem/: __init__.py  cli.py  config.py  tagger.py  xmp_handler.py
tests/: test_tagger.py
